[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
sha256 = "1.6.0"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
hmac = "0.12.1"
hex = "0.4"
serde_json = "1.0.145"
sha2 = "0.10.9"
dotenv = "0.15.0"
generic-array = "1.3.5"
reqwest = { version = "0.12.24", features = ["json"] }
[dependencies.uuid]
version = "1.18.1"
features = [
    "v4","serde"
]
